[project]
name = "entropy-hash"
version = "0.1.2"
description = "EntropyHash: near document duplicate detection algorithm"
authors = [{ name = "Saeed Dehqan", email = "saeeddhqan@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "numpy",
    "scikit-learn"
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/saeeddhqan/entropy_hash"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["entropy_hash*"]
